--- a/css/formstyle.css
+++ b/css/formstyle.css
@@ -98,3 +98,79 @@
         box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
     }
 
+    .contact-form {
+        flex: 1;
+        background-color: #ffffff;
+        padding: 25px;
+        border-radius: 10px;
+        border: 2px solid #e5e5e5;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    /* Form Styling */
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #1a1a1a;
+    font-weight: 600;
+}
+
+.form-group input,
+.form-group select,
+.form-group textarea {
+    width: 100%;
+    padding: 12px;
+    border: 2px solid #e5e5e5;
+    border-radius: 5px;
+    font-size: 1em;
+    transition: border-color 0.3s ease;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    color: #1a1a1a;
+}
+
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus {
+    outline: none;
+    border-color: #D8CFBC;
+    box-shadow: 0 0 8px rgba(220, 38, 38, 0.2);
+    background-color: #ffffff;
+}
+.contact-form button{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    background-color: #c2c5aa;
+    border: none;
+    color: black;
+    font-weight: bold;
+    padding: 10px 15px;
+    border-radius: 8px;
+    transition: background 1s;
+    margin-bottom: 15px;
+}
+
+.contact-form button:hover {
+    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
+}
+
+.container {
+    width: 500px;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.main p {
+    text-align: center;
+    font-size: 50px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+}
+
