--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,7 @@ section {
     }
     .contact-form button {
         background-color: #936639 ;
+        color: white;
     }
     .product-card-welcome a {
         color: white;
