--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ section {
         background-color: #a68a6401;
     
     }
-    a,h1,h2,h3,h4,h5,h6 {
+    a,h1,h2,h3,h4,h5,h6,p,li {
         color: #fffbf4;
     }
     .contact-form button {
@@ -545,6 +545,7 @@ section {
     .product-card-welcome a {
         color: white;
     }
+    
   }
 
   /* ==============================
